# ragbits

./: .gitignore  .gitlab-ci.yml  .libraries-whitelist.txt  .license-whitelist.txt  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .trivyignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  REBASE_SUMMARY.md  check_licenses.sh  docker-compose.yml  index.html  memory_tool_example.py  mkdocs.yml  mkdocs_hooks.py  package-lock.json  package.json  push_rebased_prs.sh  pyproject.toml  rebase_all_prs.sh  release_checklist.md  requirements-dev.txt  ruffs_output.txt  setup_dev_env.fish  setup_dev_env.sh  sitemap.xml  tsconfig.json  versions.json
.claude/: README.md
.claude/agents/: changelog-post-writer.md  changelog-summarizer.md  commit-validator.md  example-generator.md  release.notes.outliner.md  release.notes.reviewer.md  release.notes.writer.md  release.pr-analysis.md  release.pr-msg-validator.md  release.pr-reviewer.md  release.pr-style-validator.md  release.pr-theme-and-type-grouper.md  release.use-case-examples.coder.md  release.use-case-examples.explorer.md  release.use-case-examples.judge.md  style-validator.md
.claude/commands/: changelog.md  release.prepare.md
.cursor/rules/: repository-setup.mdc
.github/ISSUE_TEMPLATE/: 01_feature_request.yml  02_bug_report.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/docs/: run-examples-caching.md
.github/scripts/: check_changelog_update.sh  check_examples.sh  check_source_changes.sh  deploy_docs.sh  example_cache.sh  list_examples.sh  patch_dependencies.py  run_examples.sh  run_single_example.sh
.github/workflows/: be.yml  build-ui.yml  ci-main.yml  ci-pr.yml  ci-push-main.yml  ci.yml  deploy-docs.yml  documentation.yaml  main-checks.yml  main.yml  nightly-build.yml  packages.yml  prepare-release.yml  prepare_release.yml  publish-docs.yaml  publish-npm.yml  publish-pypi.yml  pull-request-change-base-branch.yml  pull-request-checks.yml  pull-request.yml  push_release.yml  run-examples.yml  semantic_release.yml  shared-client.yml  shared-modules.yml  shared-packages.yml  shared-ui.yml  shared.yml  sync-develop-after-release.yml  ui.yml
1.3.0/: index.html  sitemap.xml
1.4.1/: 404.html  index.html  objects.inv  sitemap.xml
1.4.1/search/: search_index.json
1.4.1/stylesheets/: extra.css
1.5.0/: 404.html  index.html  objects.inv  sitemap.xml
1.5.0/search/: search_index.json
1.6.1/: 404.html  index.html  sitemap.xml
1.6.1/builder-journal/: index.html
1.6.1/search/: search_index.json
1.6.2/: 404.html  index.html  objects.inv  sitemap.xml
1.6.2/builder-journal/: index.html
1.6.2/search/: search_index.json
chat_history/: 04cb8d0f-57e8-4ace-8995-e7bd88d22871.jsonl  0ba43563-0f3c-479a-aad9-ff44e6fe2de3.jsonl  14a792fc-5167-4119-b749-3207771ea8ae.jsonl  1ad45a7e-e850-4653-9ccd-f44cd39ea643.jsonl  2f02f493-10a1-4a3b-83c4-7546418251ad.jsonl  5898b747-4469-47ea-b0fa-a61c0f81de54.jsonl  5f9f00b2-9e32-47c3-8efc-320fa9ac7dd3.jsonl  7796aa29-3345-43db-95c8-dca28b7a5744.jsonl  84119e5e-d48e-4bb1-900c-ef758893e025.jsonl  970f4e9c-16bf-45bd-8525-f6309c65ca30.jsonl  9a50fa08-5258-4d6b-94a6-f52e782dc2e8.jsonl  9dd9996c-c2c3-4155-8ebd-bf6ecb34e35d.jsonl  b5c401a3-042c-40a0-81e7-78cded88cfe8.jsonl  c5d27a88-5954-4b29-89d8-c4062ab38699.jsonl  cf49e466-e112-40f2-9268-ff308208f577.jsonl  d0e1827f-ff2b-4a32-9ba6-8b3e1b7f915a.jsonl  dcb543bf-9073-4476-bb06-9c721e6a7456.jsonl  de2fe60c-c922-483b-ba40-163e73fa52c1.jsonl  e3a84659-fc26-4a95-bd06-e08b0884909f.jsonl  e9444c7d-7c5f-4d85-a7a7-5143736e536d.jsonl  eae88767-e5fc-4090-909b-bb153a7a3563.jsonl  ec7e8afa-788e-43f8-93dc-c4e67eeb8d41.jsonl  ecc79307-70f0-4e04-92ea-d4859ff263b4.jsonl
data/102-chore-move-examples-to-the-root-folder/: coverage.xml
data/108-refactordocument-search-change-the-type-of-the-source-argument-in-the-from_source-method-to-source/: coverage.xml
data/119-refactorcli-lazy-load-required-modules-at-command-level/: coverage.xml
data/127-featdatasets-add-synthetic-data-generation-pipeline/: coverage.xml
data/128-chore-run-tests-on-all-supported-versions-of-python/: coverage.xml
data/131-featcore-add-cli-commands-to-render--exec-prompts/: coverage.xml
data/139-enabler-propose-structure-for-document-processing-loading-and-chunking-independent-from-unstructured/: coverage.xml
data/14-refactor-move-vector_search-capabilities-to-core-package/: coverage.xml
data/147-chore-run-ruff-and-mypy-githooks/: coverage.xml
data/157-flatten-metadata-chroma/: coverage.xml
data/16-featcli-add-basic-setup-for-ragbits-cli/: coverage.xml
data/160-featdocuments-id-field-for-element/: coverage.xml
data/17-chore-add-package-version-update-action/: coverage.xml
data/178-chore-docs-for-prompts/: coverage.xml
data/18-featdocument-search-allow-to-create-documentsearch-instances-from-config/: coverage.xml
data/182-feat-batch-ingestion-of-documents/: coverage.xml
data/19-featdocument-search-add-evaluation-pipeline-for-retrieval-accuracy/: coverage.xml
data/193-featdocument-search-add-ray-processing-strategy/: coverage.xml
data/196-featprompts-image-input-field-should-accept-image-data-url/: coverage.xml
data/198-bug-license-and-contribution-links-in-pypi-do-not-work/: coverage.xml
data/arize/: coverage.xml
docs/: index.md  tools-integration.md
examples/: README.md  chat-dashboard.json  dashboard.json  manual_test.py
nightly/: 404.html  index.html  objects.inv  sitemap.xml
private/: main.tsx  package-lock.json  package.json  vite.config.ts
scripts/: check_nightly_build.py  create_ragbits_package.py  create_release_notes.py  eval-ui.sh  generate_changelog_entries.py  generate_typescript_from_json_schema.py  install_git_hooks.py  remove-claude-signature.sh  test_api_client.py  update_changelogs.py  update_develop_versions.py  update_nightly_npm_versions.py  update_nightly_versions.py  update_ragbits_package.py  update_versions.py
search/: search_index.json
stable/: 404.html  index.html  objects.inv  sitemap.xml
ui/: index.html  package-lock.json  package.json  prettier.config.js  tailwind.config.js  vite.config.ts
(+1671 files in other folders)
