[project]
name = "ragbits-workspace"
version = "0.1.0"
description = "Ragbits development workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ragbits-core[litellm,local,lab,chromadb]",
    "ragbits-document-search[gcs, huggingface]",
    "ragbits-cli"
]


[tool.uv]
dev-dependencies = [
    "pre-commit~=3.8.0",
    "pytest~=8.3.3",
    "pytest-cov~=5.0.0",
    "pytest-asyncio~=0.24.0",
    "pip-licenses>=4.0.0,<5.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-material>=9.5.39",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "griffe>=1.3.2",
    "griffe-typingdoc>=0.2.7",
]

[tool.uv.sources]
ragbits-core = { workspace = true }
ragbits-document-search = { workspace = true }
ragbits-cli = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/ragbits-core",
    "packages/ragbits-document-search",
    "packages/ragbits-cli"
]

[tool.pytest]
norecursedirs = [
    '.git',
    '.tox',
    '.env',
    'dist',
    'build',
    'migrations',
    'docker',
    'config',
    'notebooks',
    'research',
]
python_files = ['test_*.py']
addopts = [
    '-ra',
    '--showlocals',
    '--strict-markers',
    '--ignore=docs/conf.py',
    '--ignore=setup.py',
    '--ignore=ci',
    '--ignore=.eggs',
    '--doctest-modules',
    '--doctest-glob=\*.rst',
    '--tb=short',
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
warn_unused_ignores = false
show_error_codes = true
check_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
mypy_path = [
    'packages/ragbits-core/src',
    'packages/ragbits-document-search/src',
    'packages/ragbits-cli/src',
]

[[tool.mypy.overrides]]
module = "ragbits.*"
ignore_missing_imports = false
disallow_untyped_defs = true

[tool.ruff]
exclude = [".venv"]
extend-include = ["*.ipynb"]
line-length = 120

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    # Default rules
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complex structure
    "D",    # pydocstyle
    "I",    # isort
    "PT",   # flake8-pytest-style
    "PL",   # Pylint
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "S",    # flake8-bandit
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "NPY",  # NumPy-specific rules
]
extend-select = [
    "RUF022",   # unsorted-dunder-all
    "PLR6301",  # no-self-use
]
ignore = [
    "B024",
    "B028",     # no-explicit-stacklevel, TODO confirm this
    "C901",     # complex-structure, TODO confirm this
    "D100",
    "D104",
    "D105",
    "D107",
    "D415",
    "D200",
    "D205",
    "D212",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN204",
    "PLR0913",
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "PLR2004",
    "W293",
    "D101",  # D*** - we should not require docs in every Jupyter notebook
    "D102",
    "D103",
    "D107"
]
# "/home/patryk/repositories/internal/ragnarok_1.0/packages/ragbits-core/tests/unit/prompts/test_prompt.py" = ["S101"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120


[tool.ruff.lint.isort]
known-first-party = ["ragbits"]
known-third-party = [
    "IPython", "PIL", "cv2", "dotenv", "editdistance", "fastapi", "fire", "hydra",
    "joblib", "loguru", "luigi", "matplotlib", "neptune", "neptune_config", "nltk",
    "numpy", "omegaconf", "pandas", "pqdm", "pydantic", "pytest", "pytorch_lightning",
    "requests", "scipy", "setuptools", "shapely", "skimage", "sklearn", "streamlit",
    "torch", "torchvision", "tqdm", "typer"
]
